--- a/mobileindex.html
+++ b/mobileindex.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>RadioSai Schedule</title>
+	
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" media="screen" href="mobileindex.css" />
 <script>/* Firefox needs this to prevent FOUC. Wow. */</script>
 </head>
